--- a/apps/vue-vite-app/package.json
+++ b/apps/vue-vite-app/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "vue-main-app",
+  "name": "vue-vite-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "vite build --mode development --watch & vite preview"
+    "preview": "vite preview"
   },
   "dependencies": {
     "vue": "^3.2.47"
