feat: poc base.

--- a/apps/react-webpack-app/package.json
+++ b/apps/react-webpack-app/package.json
@@ -10,8 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.62",
