--- a/apps/vue-vite-app/package.json
+++ b/apps/vue-vite-app/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite build -w & vite preview"
   },
   "dependencies": {
     "vue": "^3.2.47"
   },
   "devDependencies": {
+    "@originjs/vite-plugin-federation": "^1.2.3",
     "@vitejs/plugin-vue": "^4.1.0",
     "vite": "^4.3.9"
   }
