--- a/apps/vue-webpack-app/package.json
+++ b/apps/vue-webpack-app/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --open --mode development"
+    "start": "webpack serve --mode development"
   },
   "author": "",
   "license": "ISC",
