--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "doc": "docs"
   },
   "scripts": {
-    "start": "pnpm --filter react-main-app start & pnpm --filter vue-main-app start & pnpm --filter vue-sub-app start & pnpm --filter vue-sub-app start"
+    "start:vue": "pnpm --filter vue-app start & pnpm --filter react-webpack-app start & pnpm --filter vue-webpack-app start & pnpm --filter react-vite-app start & pnpm --filter vue-vite-app start",
+    "start:react": "pnpm --filter react-app start & pnpm --filter react-webpack-app start & pnpm --filter vue-webpack-app start & pnpm --filter react-vite-app start & pnpm --filter vue-vite-app start"
   },
   "author": "",
   "license": "ISC"
