--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "react-webpack-app",
+  "name": "main-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode development"
+    "start": "webpack serve --open --mode development"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.0"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.66",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
-    "mini-css-extract-plugin": "^2.7.6",
     "swc-loader": "^0.2.3",
     "webpack": "^5.88.0",
     "webpack-cli": "^5.1.4",
