--- a/apps/webpack-main/package.json
+++ b/apps/webpack-main/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --open --mode development"
+    "start": "webpack serve --open --mode development",
+    "dev": "webpack --mode development"
   },
   "author": "",
   "license": "ISC",
@@ -12,13 +13,12 @@
     "@module-federation/enhanced": "^0.3.3"
   },
   "devDependencies": {
-    "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.66",
-    "css-loader": "^6.8.1",
-    "html-webpack-plugin": "^5.5.3",
-    "swc-loader": "^0.2.3",
-    "webpack": "^5.88.0",
+    "@swc/cli": "^0.4.0",
+    "@swc/core": "^1.7.5",
+    "html-webpack-plugin": "^5.6.0",
+    "swc-loader": "^0.2.6",
+    "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^5.0.4"
   }
 }
