--- a/apps/webpack-main-app/package.json
+++ b/apps/webpack-main-app/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "main-app",
+  "name": "webpack-main-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --open --mode development",
+    "serve": "webpack serve",
     "dev": "webpack --mode development"
   },
   "author": "",
